# jobmarket

./: .env.example  SETUP_COMMANDS.md  db.sqlite3  index.html  main.py  manage.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
jobmarkt_project/: asgi.py  settings.py  urls.py  wsgi.py
registrations/: admin.py  admin_views.py  forms.py  models.py  payment_views.py  urls.py  user_views.py  views.py
registrations/management/commands/: select_winners.py
registrations/migrations/: 0001_initial.py  0002_registration_user_payment.py
static/css/: style.css
static/js/: main.js
templates/: base.html
templates/registrations/: admin_dashboard.html  admin_jobs.html  admin_monthly_draws.html  admin_registration_detail.html  admin_registrations.html  admin_simple.html  admin_winners.html  faq.html  home.html  how_it_works.html  payment.html  payment_history.html  registration.html  registration_success.html  user_dashboard.html  user_login.html  user_profile.html  user_register.html  user_winners.html
templates/registrations/partials/: footer.html  header.html
