[project]
name = "jobmarket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-install>=0.2.0",
    "django>=6.0",
    "django-cors-headers>=4.0.0",  # CORS support
    "pya2l>=0.1.10",
    "pypaystack2>=2.0.0",
    "requests>=2.31.0",
]
